[gd_scene load_steps=22 format=3 uid="uid://i20apuqnuudg"]

[ext_resource type="Script" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/Structure3DContainer/parts/room_nodes.gd" id="1_fhdg3"]
[ext_resource type="LabelSettings" uid="uid://cwas73lpm1tqt" path="res://Fonts/game/label_medium.tres" id="4_2d0xm"]
[ext_resource type="PackedScene" uid="uid://d1copqdrd5j0s" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/Structure3DContainer/parts/RoomNode3d.tscn" id="4_b2h6u"]
[ext_resource type="FontFile" uid="uid://cmbf3fsdcpk2b" path="res://Fonts/Ac437_IBM_Model3x_Alt2.ttf" id="4_g74p6"]
[ext_resource type="LabelSettings" uid="uid://bhvjm3opd1txx" path="res://Fonts/game/label_small.tres" id="5_312tc"]
[ext_resource type="PackedScene" uid="uid://b8hw5jenpkiw8" path="res://UI/Buttons/TextBtn/TextBtn.tscn" id="7_gytyc"]

[sub_resource type="ViewportTexture" id="ViewportTexture_u0dki"]
viewport_path = NodePath("SubViewport")

[sub_resource type="Environment" id="Environment_ngmdl"]
tonemap_mode = 2
tonemap_exposure = 0.57
tonemap_white = 1.75
ssr_fade_in = 2.23928
ssr_depth_tolerance = 31.21
ssao_radius = 6.51
ssil_enabled = true
ssil_intensity = 8.26
ssil_sharpness = 0.29
sdfgi_use_occlusion = true
sdfgi_read_sky_light = false
sdfgi_bounce_feedback = 0.44
sdfgi_cascades = 1
sdfgi_max_distance = 25.6
volumetric_fog_enabled = true
adjustment_enabled = true
adjustment_contrast = 1.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hldmr"]
albedo_color = Color(0.411348, 0.383692, 0.260737, 1)
metallic = 0.9
metallic_specular = 0.0
clearcoat_enabled = true

[sub_resource type="BoxMesh" id="BoxMesh_kw1d3"]
material = SubResource("StandardMaterial3D_hldmr")
flip_faces = true
size = Vector3(30, 8, 30)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ygf5b"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_l2d6o"]
material = SubResource("StandardMaterial3D_ygf5b")

[sub_resource type="FogMaterial" id="FogMaterial_0edq6"]
density = 1.1734
albedo = Color(0.752783, 0, 0.135229, 1)
emission = Color(1, 0.16, 0.16, 1)
height_falloff = 1e-05
edge_fade = 3.42966

[sub_resource type="ViewportTexture" id="ViewportTexture_wwv44"]
viewport_path = NodePath("ControlSubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_yhbag"]
viewport_path = NodePath("ControlMenuSubviewport")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_puxs3"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxLine" id="StyleBoxLine_nkr4v"]
color = Color(1, 1, 1, 1)
grow_end = -5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c6s3k"]
bg_color = Color(0, 0.254902, 0.0823529, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0p4no"]
bg_color = Color(0, 0.254902, 0.0823529, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5u12g"]
bg_color = Color(0, 0.254902, 0.0823529, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wkds5"]
bg_color = Color(0, 0.254902, 0.0823529, 1)

[node name="RoomNodes" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fhdg3")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = SubResource("ViewportTexture_u0dki")
stretch_mode = 6

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(1920, 1080)

[node name="RoomColumn" type="Node3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewport/RoomColumn"]
environment = SubResource("Environment_ngmdl")

[node name="LeftWallLabel" type="Label3D" parent="SubViewport/RoomColumn"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 12.0652, 5.21552, 1.87222)
outline_modulate = Color(1, 1, 1, 1)
text = "WING A"
font = ExtResource("4_g74p6")
font_size = 300
outline_size = 28
uppercase = true
line_spacing = 20.0

[node name="FloorMesh" type="MeshInstance3D" parent="SubViewport/RoomColumn"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.3, 0)
layers = 16
mesh = SubResource("BoxMesh_kw1d3")

[node name="NodeContainer" type="Node3D" parent="SubViewport/RoomColumn"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 1.6, -3.133)

[node name="column1" type="Node3D" parent="SubViewport/RoomColumn/NodeContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="3" parent="SubViewport/RoomColumn/NodeContainer/column1" instance=ExtResource("4_b2h6u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0, 0)
ref_index = 3

[node name="6" parent="SubViewport/RoomColumn/NodeContainer/column1" instance=ExtResource("4_b2h6u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, 0)
ref_index = 6

[node name="8" parent="SubViewport/RoomColumn/NodeContainer/column1" instance=ExtResource("4_b2h6u")]
ref_index = 8

[node name="column2" type="Node3D" parent="SubViewport/RoomColumn/NodeContainer"]

[node name="1" parent="SubViewport/RoomColumn/NodeContainer/column2" instance=ExtResource("4_b2h6u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0, 6)
ref_index = 1

[node name="4" parent="SubViewport/RoomColumn/NodeContainer/column2" instance=ExtResource("4_b2h6u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, 6)
ref_index = 4

[node name="7" parent="SubViewport/RoomColumn/NodeContainer/column2" instance=ExtResource("4_b2h6u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6)
ref_index = 7

[node name="column3" type="Node3D" parent="SubViewport/RoomColumn/NodeContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)

[node name="0" parent="SubViewport/RoomColumn/NodeContainer/column3" instance=ExtResource("4_b2h6u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0, 12)
ref_index = 0

[node name="2" parent="SubViewport/RoomColumn/NodeContainer/column3" instance=ExtResource("4_b2h6u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, 12)
ref_index = 2

[node name="5" parent="SubViewport/RoomColumn/NodeContainer/column3" instance=ExtResource("4_b2h6u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 12)
ref_index = 5

[node name="Spotlights" type="Node3D" parent="SubViewport/RoomColumn"]
transform = Transform3D(2.74465e-15, 2.18557e-08, -0.5, 0.5, -2.18557e-08, 1.78931e-15, -2.18557e-08, -0.5, -2.18557e-08, 7.06525, 4.20603, 15.0046)

[node name="Spotlight2" type="MeshInstance3D" parent="SubViewport/RoomColumn/Spotlights"]
transform = Transform3D(7.10543e-15, 4.37114e-08, -1, 1, -4.37114e-08, 3.55271e-15, -4.37114e-08, -1, -4.37114e-08, 4.01911, 0.00659752, 1.11846)
mesh = SubResource("CapsuleMesh_l2d6o")
skeleton = NodePath("")

[node name="OmniLight3D" type="OmniLight3D" parent="SubViewport/RoomColumn/Spotlights/Spotlight2"]
transform = Transform3D(0.433594, 0.893817, 0.114397, 0.205567, 0.0254902, -0.978311, -0.877347, 0.447706, -0.172687, 0.948898, 0.0649261, 0.677778)
light_color = Color(1, 0, 0, 1)
light_energy = 4.231
shadow_enabled = true
omni_range = 1.15
omni_attenuation = 4.007

[node name="Spotlight" type="SpotLight3D" parent="SubViewport/RoomColumn/Spotlights/Spotlight2"]
transform = Transform3D(0.501368, 0.1048, -0.858864, 0.581953, -0.775407, 0.245103, -0.640282, -0.622705, -0.449753, 1.67747, 0, 0)
layers = 31
light_color = Color(1, 0, 0, 1)
light_energy = 1.396
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.001
light_specular = 0.0
shadow_enabled = true
shadow_bias = 0.0
shadow_transmittance_bias = 0.154
spot_range = 31.852
spot_attenuation = -3.0
spot_angle = 43.79
spot_angle_attenuation = 0.466516

[node name="Spotlight3" type="MeshInstance3D" parent="SubViewport/RoomColumn/Spotlights"]
transform = Transform3D(7.10543e-15, 4.37114e-08, -1, 1, -4.37114e-08, 3.55271e-15, -4.37114e-08, -1, -4.37114e-08, 4.01911, 0.00659752, 15.6689)
mesh = SubResource("CapsuleMesh_l2d6o")
skeleton = NodePath("")

[node name="OmniLight3D" type="OmniLight3D" parent="SubViewport/RoomColumn/Spotlights/Spotlight3"]
transform = Transform3D(0.433594, 0.893817, 0.114397, 0.205567, 0.0254902, -0.978311, -0.877347, 0.447706, -0.172687, 0.948898, 0.0649261, 0.677778)
light_color = Color(1, 0, 0, 1)
light_energy = 4.231
shadow_enabled = true
omni_range = 1.15
omni_attenuation = 4.007

[node name="Spotlight" type="SpotLight3D" parent="SubViewport/RoomColumn/Spotlights/Spotlight3"]
transform = Transform3D(0.501368, 0.1048, -0.858864, 0.581953, -0.775407, 0.245103, -0.640282, -0.622705, -0.449753, 1.67747, 0.94552, 0)
layers = 31
light_color = Color(1, 0, 0, 1)
light_energy = 1.396
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.001
light_specular = 0.0
shadow_enabled = true
shadow_bias = 0.0
shadow_transmittance_bias = 0.154
spot_range = 31.852
spot_attenuation = -3.0
spot_angle = 43.79
spot_angle_attenuation = 0.466516

[node name="NormalLights" type="Node3D" parent="SubViewport/RoomColumn"]

[node name="OmniLight3D" type="OmniLight3D" parent="SubViewport/RoomColumn/NormalLights"]
transform = Transform3D(1, 0, 0, 0, 1, -7.45058e-09, 0, 7.45058e-09, 1, 8.10712, 7.04194, 8.01598)
light_energy = 1.668
light_volumetric_fog_energy = 0.02
light_specular = 0.448
shadow_enabled = true
shadow_opacity = 0.37
omni_range = 32.8872
omni_attenuation = -0.825

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewport/RoomColumn/NormalLights"]
transform = Transform3D(-0.752333, 0.0202338, -0.658472, -0.400038, 0.780113, 0.481033, 0.523416, 0.625311, -0.578811, -1.6585e-10, 2.34798, 2.45522)
layers = 0
light_energy = 4.428
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
shadow_enabled = true
shadow_transmittance_bias = -2.347
shadow_opacity = 0.68

[node name="EmergencyLights" type="Node3D" parent="SubViewport/RoomColumn"]

[node name="FogVolume" type="FogVolume" parent="SubViewport/RoomColumn/EmergencyLights"]
transform = Transform3D(-0.642395, -0.00704604, 0.766341, 0.00275932, 0.99993, 0.0115068, -0.766368, 0.00950655, -0.642331, 5.16973, -0.706925, 6.20134)
size = Vector3(32.5796, 3, 39.2004)
material = SubResource("FogMaterial_0edq6")

[node name="OmniLight3D" type="OmniLight3D" parent="SubViewport/RoomColumn/EmergencyLights"]
transform = Transform3D(1, 0, 0, 0, 1, -7.45058e-09, 0, 7.45058e-09, 1, 8.10712, 7.04194, 8.01598)
light_color = Color(0.426196, 0, 0.148233, 1)
light_energy = 1.668
light_volumetric_fog_energy = 0.02
light_specular = 0.448
shadow_enabled = true
shadow_opacity = 0.37
omni_range = 27.206
omni_attenuation = -1.607

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewport/RoomColumn/EmergencyLights"]
transform = Transform3D(-0.752333, 0.0202338, -0.658472, -0.400038, 0.780113, 0.481033, 0.523416, 0.625311, -0.578811, -1.6585e-10, 2.34798, 2.45522)
layers = 0
light_energy = 2.917
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
shadow_enabled = true
shadow_transmittance_bias = -2.347
shadow_opacity = 0.68
sky_mode = 1

[node name="Spotlight2" type="MeshInstance3D" parent="SubViewport/RoomColumn/EmergencyLights"]
transform = Transform3D(2.74465e-15, 2.18557e-08, -0.5, 0.5, -2.18557e-08, 1.78931e-15, -2.18557e-08, -0.5, -2.18557e-08, 7.06525, 1.59641, 15.0046)
visible = false
mesh = SubResource("CapsuleMesh_l2d6o")
skeleton = NodePath("")

[node name="SpotLight3D2" type="SpotLight3D" parent="SubViewport/RoomColumn/EmergencyLights/Spotlight2"]
transform = Transform3D(-1, -8.73929e-08, 2.28846e-09, 0, -0.026177, -0.999658, 8.74228e-08, -0.999658, 0.026177, 0, 0, 0)
layers = 31
light_color = Color(1, 0, 0, 1)
light_energy = 0.249
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.001
light_specular = 0.0
shadow_enabled = true
shadow_bias = 0.0
shadow_transmittance_bias = 0.154
spot_range = 31.852
spot_attenuation = -2.61
spot_angle = 25.0262
spot_angle_attenuation = 0.466516

[node name="OmniLight3D" type="OmniLight3D" parent="SubViewport/RoomColumn/EmergencyLights/Spotlight2/SpotLight3D2"]
transform = Transform3D(0.111561, -0.159704, -0.980841, 0.86483, -0.470584, 0.174988, -0.489514, -0.867782, 0.085618, 0.243651, 0.295763, -1.95284)
light_color = Color(1, 0, 0, 1)
light_energy = 1.052
shadow_enabled = true
omni_range = 2.194
omni_attenuation = -8.306

[node name="Spotlight3" type="MeshInstance3D" parent="SubViewport/RoomColumn/EmergencyLights"]
transform = Transform3D(2.74465e-15, 2.18557e-08, -0.5, 0.5, -2.18557e-08, 1.78931e-15, -2.18557e-08, -0.5, -2.18557e-08, -0.469174, 1.59641, 15.0046)
visible = false
mesh = SubResource("CapsuleMesh_l2d6o")
skeleton = NodePath("")

[node name="SpotLight3D2" type="SpotLight3D" parent="SubViewport/RoomColumn/EmergencyLights/Spotlight3"]
transform = Transform3D(-1, -8.73929e-08, 2.28846e-09, 0, -0.026177, -0.999658, 8.74228e-08, -0.999658, 0.026177, 0, 0, 0)
layers = 31
light_color = Color(1, 0, 0, 1)
light_energy = 0.249
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.001
light_specular = 0.0
shadow_enabled = true
shadow_bias = 0.0
shadow_transmittance_bias = 0.154
spot_range = 31.852
spot_attenuation = -2.61
spot_angle = 25.0262
spot_angle_attenuation = 0.466516

[node name="OmniLight3D" type="OmniLight3D" parent="SubViewport/RoomColumn/EmergencyLights/Spotlight3/SpotLight3D2"]
transform = Transform3D(0.111561, -0.159704, -0.980841, 0.86483, -0.470584, 0.174988, -0.489514, -0.867782, 0.085618, 0.243651, 0.295763, -1.95284)
light_color = Color(1, 0, 0, 1)
light_energy = 1.052
shadow_enabled = true
omni_range = 2.194
omni_attenuation = -8.306

[node name="SpriteLayer" type="Node3D" parent="SubViewport/RoomColumn"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 20)

[node name="CursorSprite" type="Sprite3D" parent="SubViewport/RoomColumn/SpriteLayer"]
transform = Transform3D(-0.996195, 0, 0.0871556, 0, 1, 0, -0.0871556, 0, -0.996195, 0, 0, 0)
pixel_size = 0.004
shaded = true
double_sided = false
no_depth_test = true
fixed_size = true
texture = SubResource("ViewportTexture_wwv44")

[node name="CursorSprite2" type="Sprite3D" parent="SubViewport/RoomColumn/SpriteLayer/CursorSprite"]
transform = Transform3D(-0.766045, 0, 0.642788, 0, 1, 0, -0.642788, 0, -0.766045, 0, -1, 0)
pixel_size = 0.004
shaded = true
double_sided = false
no_depth_test = true
fixed_size = true
texture = SubResource("ViewportTexture_yhbag")

[node name="MainCamera" type="Camera3D" parent="SubViewport/RoomColumn"]
transform = Transform3D(-0.707107, 0.353553, -0.612373, 0, 0.866025, 0.5, 0.707107, 0.353553, -0.612373, -17.995, 17, -18.216)
projection = 1
current = true
size = 24.0
near = 0.002
far = 508.7

[node name="ControlSubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(130, 80)

[node name="ControlPanelContainer" type="PanelContainer" parent="ControlSubViewport"]
offset_right = 80.0
offset_bottom = 28.0
theme_override_styles/panel = SubResource("StyleBoxFlat_puxs3")

[node name="MarginContainer" type="MarginContainer" parent="ControlSubViewport/ControlPanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ControlSubViewport/ControlPanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CursorLabel" type="Label" parent="ControlSubViewport/ControlPanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = ">> BARRICKS"
label_settings = ExtResource("4_2d0xm")

[node name="ControlMenuSubviewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(90, 90)

[node name="ControlMenuContainer" type="PanelContainer" parent="ControlMenuSubviewport"]
offset_right = 108.0
offset_bottom = 138.0
theme_override_styles/panel = SubResource("StyleBoxFlat_puxs3")

[node name="MarginContainer" type="MarginContainer" parent="ControlMenuSubviewport/ControlMenuContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ControlMenuSubviewport/ControlMenuContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="ControlMenuSubviewport/ControlMenuContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ControlMenuSubviewport/ControlMenuContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "ACTIONS"
label_settings = ExtResource("5_312tc")

[node name="HSeparator" type="HSeparator" parent="ControlMenuSubviewport/ControlMenuContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxLine_nkr4v")

[node name="VBoxContainer" type="VBoxContainer" parent="ControlMenuSubviewport/ControlMenuContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextBtn" parent="ControlMenuSubviewport/ControlMenuContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("7_gytyc")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_c6s3k")
panel_color = Color(0, 0.254902, 0.0823529, 1)
title = "BUILD"

[node name="TextBtn2" parent="ControlMenuSubviewport/ControlMenuContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("7_gytyc")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0p4no")
panel_color = Color(0, 0.254902, 0.0823529, 1)
title = "ASSIGN SCP"

[node name="TextBtn3" parent="ControlMenuSubviewport/ControlMenuContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("7_gytyc")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5u12g")
panel_color = Color(0, 0.254902, 0.0823529, 1)
title = "REMOVE"

[node name="TextBtn4" parent="ControlMenuSubviewport/ControlMenuContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("7_gytyc")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wkds5")
panel_color = Color(0, 0.254902, 0.0823529, 1)
title = "POWER"

[connection signal="item_rect_changed" from="ControlSubViewport/ControlPanelContainer" to="." method="on_label_control_subpanel_rect_changed"]
[connection signal="item_rect_changed" from="ControlMenuSubviewport/ControlMenuContainer" to="." method="on_menu_control_subpanel_rect_changed"]
